<resources>
    <string name="app_name">Contest</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="account">Account</string>
    <string name="account_setting_iv">Account setting iv</string>
    <string name="title_activity_follower">FollowerActivity</string>
    <string name="title_activity_start_new_contest">StartNewContestActivity</string>
    <string name="dotes">..</string>
    <string name="creator">Creator</string>
    <string name="votes">Vote</string>
    <string name="comments">Comments</string>
    <string name="start_video">Start video</string>
    <string name="full_name">Full Name</string>
    <string name="you_can_earn_credit_by_winning_contests_or_watching_video">You can earn credit by winning contests Or Buy credits</string>
    <string name="watch_video">watch video</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAx2ywhzp5guUSCEuOiiK88plEj4PeIVyueHvF4muoVX0Vdo3pmDD7KDcw3cvzTs4S2FpFQ6U3+36EROVV5u+lxC7u7YrsOG5bb+gsgi6bBzzAY/SPsRtMz2DnlStR+su2wT1HGgFCcQ5CtkzXPblZpAQjxqc/BdtMC7TyyiXV7q4lyI9wSllEENsagnLv3tb03IR03ZGv6OMhy+wspL2DCd0lyxtne18YIspWIvOjvLgmBQIhdpj/dYqRyzNYoiPsd7niP+FKuYz6zfANt42esp6igGwQv/NfFAY9LiW8byWNLJPxKDb8BEPi7VmfTttnmtNT2vZqmjpnMRshDOr5ywIDAQAB</string>
    <string name="voice_search">voice_search</string>
    <string name="notification_receive_listener">Notification Receive Listener</string>
    <string name="web_client_id">227921231039-ku1aensrnkqs4qtgegogm4u8igo01lj8.apps.googleusercontent.com</string>
    <string name="select_a_user_to_send_competition">Select A User To Send A Competition</string>
    <string name="if_you_want_to_update_only_one_information_then_enter_previous_information_in_other_field">If you want to update only one information then enter previous information in other field</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="contest">Contest</string>
    <string name="you_are_one_step_away_from_being">You are one step away from being</string>
    <string name="famous">FAMOUS !</string>
    <string name="create_a_contest">Create A Contest</string>
    <string name="click_here_and_create_any_type_of_contest"> Click Here And Create Any Type Of Contest </string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="update">update</string>
    <string name="in_order_to_create_a_contest_with_your_friend_it_is_necessary_to_follow_his_her_and_he_she_follow_you">In order to create a contest with your friend it is necessary to follow his/her and he/she follows you</string>
    <string name="simple_post">Simple Post</string>
    <string name="enter_your_new_name">Enter your new name</string>
    <string name="update_password">Update password</string>
    <string name="update_password_only">Update password only</string>
    <string name="update_email_only">Update email only</string>
    <string name="update_name_only">Update Name only</string>
    <string name="send">Send</string>
    <string name="conversation">Conversations List</string>
    <string name="your_message">your message</string>
    <string name="messages">Messages</string>

</resources>
