<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <com.contest.competition.utils.views.RalewayBoldButton
        android:id="@+id/update_password_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/update_password_only"
        android:background="@color/app_theme_first_color"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <com.contest.competition.utils.views.RalewayBoldButton
        android:id="@+id/update_email_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/update_email_only"
        android:background="@color/app_theme_second_color"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <com.contest.competition.utils.views.RalewayBoldButton
        android:id="@+id/update_name_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/update_name_only"
        android:background="@color/app_theme_first_color"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>