<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/simple_postBtn"/>




    <com.contest.competition.utils.views.RalewayBoldButton
        android:id="@+id/simple_postBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/peter"
        android:layout_margin="20dp"
        android:layout_centerVertical="true"
        android:text="@string/simple_post"
        />

    <com.contest.competition.utils.views.RalewayBoldButton
        android:id="@+id/createNewContestBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green_button"
        android:layout_margin="20dp"
        android:layout_below="@+id/simple_postBtn"
        android:text="@string/create_a_contest"/>


    <com.contest.competition.utils.views.MonserratBoldTv
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/in_order_to_create_a_contest_with_your_friend_it_is_necessary_to_follow_his_her_and_he_she_follow_you"
        android:padding="20dp"

        android:textSize="16sp"
        android:textColor="@color/lightRed"
        />


</LinearLayout>
